# dftpd

./: .gitignore  CMakeLists.txt  FileTable.c  FileTable.h  FtpCommands.c  FtpCommands.h  FtpThread.c  FtpThread.h  Makefile  OpenedSockets.c  OpenedSockets.h  README.md  SocketAperti.c  SocketAperti.h  TabellaFile.c  TabellaFile.h  UserTable.c  WorkerThread.c  WorkerThread.h  main.c  main.h
dftp/: main.c
dftpd/: FileTable.c  FileTable.h  FtpCommands.c  FtpCommands.h  OpenedSockets.c  OpenedSockets.h  UserTable.c  UserTable.h  main.c  main.h
